# Task-Work-Flow

./: README.md  docker-compose.yaml
backend/: .env  Dockerfile  Makefile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 2023-08-31_f4e7960a4559_.py  2023-09-01_fd4d2385e722_.py
backend/src/: config.py  database.py  main.py
backend/src/employees/: models.py  routers.py  schemas.py  services.py
backend/src/tasks/: models.py  routers.py  schemas.py  services.py
backend/tests/: conftest.py
backend/tests/employees_test/: employee_create_test.py
backend/tests/tasks_test/: task_create_test.py
